# wes

./: .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  GITHUB_ACTIONS_IMPROVEMENTS.md  Implementation-Plan.md  Makefile  Makefile.additions  ORIGINAL_PROMPT.txt  PRD-Executive-Summary-Tool.md  README.md  REDHAT_JIRA.md  SECURITY.md  TEST_HANGING_DIAGNOSIS.md  ghactions_wtf.txt  pyproject.toml  setup_google_oauth.py  test_formatting.py  test_oauth_setup.py  test_responsive_dialog.py
.github/: dependabot.yml
.github/workflows/: README.md  codeql-analysis.yml  comprehensive-tests.yml  nightly-build.yml  quick-checks.yml  security.yml  tests.yml
docs/: AUTHENTICATION_FIX_SUMMARY.md  BUILDING.md  DESIGN_INCLUDE_COMMENTS_DEFAULT.md  GOOGLE_OAUTH_FIX.md  GOOGLE_OAUTH_SETUP.md  HEADLESS_TESTING.md  RESPONSIVE_CONFIG_EXAMPLE.md  event-loop-error-fix-summary.md  google-docs-removal-proposal.md  google-oauth-simplification-design.md  jira-hierarchy-feature.md  ldap-jira-user-mapping-design.md  main_window_integration.py  oauth-proxy-implementation-spec.md  runtime-error-fix-summary.md  setup-ux-simplification-plan.md  simplified-oauth-guide.md  unified-config-implementation-example.py  unified-config-implementation-summary.md  unified-config-migration-guide.md  unified-config-mockup.md  unified-config-user-experience-changes.md
examples/: ldap_integration_example.py
flatpak/: build.sh  com.company.wes.yml
oauth-proxy/: Dockerfile  README.md  main.py  requirements.txt  vercel.json
requirements/2025-07-10-2118-setup-config-simplify/: 00-initial-request.md  01-discovery-questions.md  02-discovery-answers.md  03-context-findings.md  04-detail-questions.md  05-detail-answers.md  06-requirements-spec.md  metadata.json
scripts/: setup_dev_env.sh  setup_headless_test.sh
src/executive_summary_tool/: __init__.py  main.py
src/executive_summary_tool/core/: __init__.py  config_manager.py  orchestrator.py  security_manager.py
src/executive_summary_tool/gui/: __init__.py  config_dialog.py  main_window.py  progress_dialog.py
src/executive_summary_tool/integrations/: gemini_client.py  google_docs_client.py  jira_client.py
src/executive_summary_tool/utils/: __init__.py  exceptions.py  logging_config.py  validators.py
src/wes/: __init__.py  main.py
src/wes/core/: __init__.py  config_manager.py  config_templates.py  credential_monitor.py  export_manager.py  orchestrator.py  performance_monitor.py  security_manager.py  service_factory.py
src/wes/gui/: config_dialog.py  credential_validators.py  export_dialog.py  jira_review_dialog.py  ldap_config_dialog.py  main_window.py  main_window_single.py  oauth_handler.py  progress_dialog.py  setup_wizard.py  simplified_oauth_handler.py  summary_worker.py
src/wes/gui/unified_config/: __init__.py  types.py  unified_config_dialog.py
src/wes/gui/unified_config/components/: __init__.py  connection_tester.py  oauth_setup_dialog.py  service_selector.py  validation_indicator.py
src/wes/gui/unified_config/config_pages/: __init__.py  app_settings_page.py  base_page.py  gemini_page.py  google_page.py  jira_page.py  security_page.py
src/wes/gui/unified_config/utils/: README.md  __init__.py  config_detector.py  constants.py  dialogs.py  factory.py  responsive_layout.py  service_locator.py  styles.py
src/wes/gui/unified_config/validators/: __init__.py  base_validator.py  service_validators.py
src/wes/gui/unified_config/views/: __init__.py  direct_view.py  guided_view.py  wizard_view.py
src/wes/integrations/: base_client.py  gemini_client.py  google_docs_client.py  jira_client.py  jira_hierarchy_resolver.py  jira_user_mapper.py  redhat_jira_client.py  redhat_jira_ldap_integration.py  redhat_ldap_client.py
src/wes/utils/: content_sanitizer.py  exceptions.py  logging_config.py  validators.py
tests/: __init__.py  conftest.py  test_headless.py
tests/e2e/: __init__.py  test_placeholder.py
tests/integration/: test_redhat_jira_integration.py
tests/security/: __init__.py  test_minimal_security.py  test_placeholder.py
tests/unit/: __init__.py  test_config_manager.py  test_jira_client_hierarchy.py  test_jira_hierarchy_resolver.py  test_jira_user_mapper.py  test_orchestrator.py  test_redhat_jira_client.py  test_security_manager.py
tests/unit/gui/unified_config/: test_unified_config_dialog.py
tests/unit/gui/unified_config/components/: test_service_selector.py  test_validation_indicator.py
tests/unit/gui/unified_config/config_pages/: test_jira_page.py
tests/unit/gui/unified_config/utils/: test_config_detector.py
tests/unit/gui/unified_config/validators/: test_service_validators.py
